# demo-pipeline

./: .env.example  .gitignore  README.md  WEBHOOK_SETUP.md  app.py  pyproject.toml  test.py
data/socialdf/: download_described_vids.ipynb  socialdf_deepfake.csv  socialdf_description.csv  socialdf_real.csv
data/socialdf/socialdf_script_vids/: README.md  processed_socialdf_description.csv  socialdf_description_download.ipynb
data/socialdf/socialdf_vids/: README.md  processes_socialdf.ipynb  socialdf_processed.csv
data/socialdf/val_socialdf/: create_val_dataset.py  val_socialdf.csv
examples/: pipeline_direct_message.py  pipeline_saving_dataset_cloud.py  test_claim_extraction_pipeline.py  test_news_matcher.py  test_sender_mesage.py
experiments/: claim_extraction.ipynb  disinformation_analysis.ipynb  testing_claim_extraction.py  video_metadata.json
src/: __init__.py
src/dataloaders/: ValidationSocialDFDataLoader.py  __init__.py
src/eventbus/: InMemoryEventBus.py
src/modules/: AnalysisMessageSender.py  DeepfakeDetectorPipeline.py  DisinformationAnalysis.py  GeminiClaimExtraction.py  NewsMatcher.py  ProcessingMessageSender.py  ReelsDonwloader.py  RelatedNewsFilter.py  __init__.py
src/pipelines/: DatasetCloudPipeline.py  DirectMessagePipeline.py  __init__.py
src/storage/: LoadDatasetFirestore.py  LoaderDatasetFirestore.py  LocalStorageService.py
src/utils/: dataclasses.py  download_insta_vids.py  instagram_downloader.py  loader_googlefile.py  video_detector.py
templates/: privacy_policy.html
